[tool.poetry]
name = "deinterlace"
version = "0.1.0"
description = ""
authors = ["Pedro Neto <cyb3neto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
yt-dlp = {extras = ["default"], version = "^2025.1.15"}
notebook = "^7.3.2"
opencv-python = "^4.11.0.86"
pillow = "^11.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
